<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.colorcoding.tools</groupId>
	<artifactId>btulz.transforms.bobas</artifactId>
	<version>0.2.0</version>
	<packaging>jar</packaging>
	<name>btulz.transforms.bobas</name>
	<url>https://colorcoding.org/tools/btulz/bobas</url>
	<organization>
		<url>https://colorcoding.org</url>
		<name>Color-Coding Studio</name>
	</organization>
	<developers>
		<developer>
			<name>Niuren Zhu</name>
			<organization>Color-Coding Studio</organization>
			<organizationUrl>https://colorcoding.org/</organizationUrl>
			<url>https://colorcoding.org/niurenzhu</url>
		</developer>
	</developers>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.version>3.15.0</maven.compiler.version>
		<maven.dependency.version>3.10.0</maven.dependency.version>
		<maven.jar.version>3.5.1</maven.jar.version>
		<maven.source.version>3.4.0</maven.source.version>
		<btulz.core.version>0.2.0</btulz.core.version>
		<eclipselink.version>4.0.6</eclipselink.version>
		<ibas.version>0.2.0</ibas.version>
		<junit.version>4.13.2</junit.version>
	</properties>
	<build>
		<pluginManagement>
			<plugins>
				<!-- 让Eclipse m2e跳过copy-dependencies的执行，避免增量构建时报错 -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-dependency-plugin</artifactId>
										<versionRange>[3.0,)</versionRange>
										<goals>
											<goal>copy-dependencies</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore/>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<release>21</release>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven.jar.version}</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>org.colorcoding.tools.btulz.bobas.Console</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven.dependency.version}</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<includeScope>runtime</includeScope>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven.source.version}</version>
				<executions>
					<execution>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>ibas-maven</id>
			<name>ibas maven repository</name>
			<url>https://maven.colorcoding.org/repository/maven-public/</url>
			<layout>default</layout>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.colorcoding.tools</groupId>
			<artifactId>btulz.transforms.core</artifactId>
			<version>${btulz.core.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.glassfish.jaxb</groupId>
					<artifactId>jaxb-runtime</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.colorcoding.ibas</groupId>
			<artifactId>bobas.businessobjectscommon</artifactId>
			<version>${ibas.version}</version>
		</dependency>
		<dependency>
			<groupId>org.colorcoding.ibas</groupId>
			<artifactId>bobas.businessobjectscommon.jersey</artifactId>
			<version>${ibas.version}</version>
		</dependency>
		<dependency>
			<groupId>org.colorcoding.ibas</groupId>
			<artifactId>bobas.businessobjectscommon.db.mssql</artifactId>
			<version>${ibas.version}</version>
		</dependency>
		<dependency>
			<groupId>org.colorcoding.ibas</groupId>
			<artifactId>bobas.businessobjectscommon.db.mysql</artifactId>
			<version>${ibas.version}</version>
		</dependency>
		<dependency>
			<groupId>org.colorcoding.ibas</groupId>
			<artifactId>bobas.businessobjectscommon.db.pgsql</artifactId>
			<version>${ibas.version}</version>
		</dependency>
		<dependency>
			<groupId>org.colorcoding.ibas</groupId>
			<artifactId>bobas.businessobjectscommon.db.hana</artifactId>
			<version>${ibas.version}</version>
		</dependency>
	</dependencies>
</project>
